Few text improvements as requested

--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@ class: home
             <div class="col-xs-12 col-md-4">
               <h2>Cloud <span class="bold">Builder</span></h2>
               <img src="/images/profil-builder.jpg" alt="Cloud Builder" />
-              <p>Consultant connaissant les briques utiles au fonctionnement d'un SI ou d'une usine logicielle, aimant les approches orientées services et bilingues Dev-Ops. Il construit la solution Cloud avec la mise en place de l’architecture cible et instruit la migration.</p>
+              <p>Consultant connaissant les briques utiles au fonctionnement d'un SI ou d'une usine logicielle, aimant les approches orientées services et bilingues DevOps. Il construit la solution Cloud avec la mise en place de l’architecture cible et instruit la migration.</p>
             </div>
             <div class="col-xs-12 col-md-4">
               <h2>Cloud <span class="bold">Runner</span></h2>
               <img src="/images/profil-runner.jpg" alt="Cloud Runner" />
-              <p>Consultants pro du système, de l'automatisation, du monitoring et du réseau ayant le goût des prods bien huilées et sécurisées, aimant les architectures qui en imposent.<br/>
+              <p>Consultant pro du système, de l'automatisation, du monitoring et du réseau ayant le goût des prods bien huilées et sécurisées, aimant les architectures qui en imposent.<br/>
               Il opère et fait évoluer la solution Cloud mise en place.</p>
             </div>
           </div>
