--- a/services.html
+++ b/services.html
@@ -16,8 +16,7 @@ class: services
                 <div class="col-md-6">
                     <h2>01_Identifier</h2>
 
-                    <p>Nous proposons l’étude du SI de l'entreprise, pour en tirer les meilleurs axes
-                        d'améliorations.</p>
+                    <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
                     <ul>
                         <li>identification des services du SI dont la transformation apportera la plus grande valeur
                         </li>
