Refactor home page for more punchy display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ class: home
             </p>
 
             <p class="more">
-              <a href="#etapes">
+              <a href="#" id="ce-que-nous-faisons">
                 <img src="./images/more.png" alt="Ce que nous faisons" width="52" height="44" /><br/>
                 Ce que nous faisons
               </a>
@@ -114,20 +114,41 @@ class: home
           <div class="row">
             <div class="col-xs-12">
               <h1 class="title">Ils nous font confiance</h1>
-              <p class="subtitle">Nous accompagnons les projets de nombreux clients grands comptes institutionnels, industriels ou du monde bancaire.</p>
+              <!--<p class="subtitle">Nous accompagnons les projets de nombreux clients grands comptes institutionnels, industriels ou du monde bancaire.</p>-->
 
               <div class="partenaires">
-                <img src="./images/partenaire_01.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_02.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_03.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_04.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_05.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_06.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_07.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_08.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_09.jpg" alt="" width="150" height="150" />
-                <img src="./images/partenaire_10.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_01.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_02.gif" alt=""  width="150px" />
+                <img src="images/references/partenaire_03.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_04.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_05.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_06.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_07.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_08.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_09.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_10.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_11.jpeg" alt="" width="100px" />
+                <img src="images/references/partenaire_12.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_13.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_14.png" alt=""  width="150px" />
+                <img src="images/references/partenaire_15.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_16.jpg" alt=""  width="150px" />
+                <img src="images/references/partenaire_17.png" alt=""  width="100px" />
               </div>
+<!--
+              <div class="partenaires">
+                <img src="images/references/partenaire_01.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_02.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_03.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_04.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_05.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_06.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_07.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_08.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_09.jpg" alt="" width="150" height="150" />
+                <img src="images/references/partenaire_10.jpg" alt="" width="150" height="150" />
+              </div>
+-->
             </div>
           </div>
         </div>
