--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@ class: contact
             <div class="col-md-4">
               <div class="contactinfo">
                 <img src="/images/map.png" alt="Adresse" />
-                <p><a href="https://goo.gl/maps/yoQeQA2pfDE2">156, boulevard Haussman<br/>75008 Paris</a></p>
+                <p><a href="https://goo.gl/maps/yoQeQA2pfDE2" class="to-maps">156, boulevard Haussman<br/>75008 Paris</a></p>
               </div>
               <div class="contactinfo">
                 <img src="/images/phone.png" alt="Contact" />
