--- a/a-propos.html
+++ b/a-propos.html
@@ -57,28 +57,36 @@ class: a-propos
           </div>
 
           <div class="row">
-            <div class="equipe col-md-3">
-              <div class="equipe-photo aurelien">
+            <div class="equipe col-md-12">
+
+              {% for wewe in site.wewes %}
+                {% for we in wewe.wewes %}
+                <div class="equipe-photo"
+                   style="background: url({{we.img}}) no-repeat center center;background-size: cover;">
+
                 <div class="equipe-mask"></div>
                 <div class="equipe-name">
-                  <h2>Aurélien Maury</h2>
-                  <h3>Directeur technique</h3>
+                  <h2>{{we.name}}</h2>
+                  <h3>{{we.title}}</h3>
                 </div>
               </div>
-            </div>
+                {% endfor %}
+              {% endfor %}
 
-            <div class="equipe col-md-3">
-              <div class="equipe-photo luc">
+<!--
+
+
+              <div class="equipe-photo"
+                   style="background: url(/images/wewes/luc-legardeur.png) no-repeat center center;background-size: cover;">
                 <div class="equipe-mask"></div>
                 <div class="equipe-name">
                   <h2>Luc Legardeur</h2>
                   <h3>Directeur général</h3>
                 </div>
               </div>
-            </div>
 
-            <div class="equipe col-md-3">
-              <div class="equipe-photo seven">
+              <div class="equipe-photo"
+               style="background: url(/images/seven-lemesle.png) no-repeat center center;background-size: cover;">
                 <div class="equipe-mask"></div>
                 <div class="equipe-name">
                   <h2>Séven Le Mesle</h2>
@@ -87,6 +95,7 @@ class: a-propos
               </div>
             </div>
           </div>
+-->
 
         </div>
       </section>
