--- a/formations.html
+++ b/formations.html
@@ -9,49 +9,33 @@ class: formations
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="title">Lorem ipsum sit dolor amet</h1>
+              <h1 class="title">Découvrez nos formations</h1>
             </div>
           </div>
+          {% for formation in site.formations %}
           <div class="row formation">
             <div class="col-md-2">
               <div class="course-image">
-                <img width="150" height="150" src="/images/seven-lemesle.png">
+                <img width="150"  src="{{formation.img}}">
               </div>
             </div>
             <div class="col-md-10">
-              <h2>Lorem ipsum sit dolor amet</h2>
+              <h2>{{formation.title}}</h2>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur volutpat orci non viverra scelerisque. Suspendisse semper turpis vel est consectetur, eget lobortis enim aliquam. Vivamus a sapien quis mauris rutrum placerat sed ut enim. Phasellus convallis vel lectus rhoncus sodales. Integer erat mi, pellentesque at fermentum vitae, eleifend et nisl. Duis ut lectus massa. Proin vel iaculis turpis. Curabitur venenatis, turpis in elementum dignissim, justo neque egestas turpis, nec sodales sem mi nec leo.</p>
+              <p>{{ formation.pitch }}</p>
 
-              <a href="/formation.html" class="button">En savoir plus</a>
+              <a href="{{ formation.url }}" class="button">En savoir plus</a>
             </div>
           </div>
-          <div class="row formation">
-            <div class="col-md-2">
-              <div class="course-image">
-                <img width="150" height="150" src="/images/seven-lemesle.png">
-              </div>
-            </div>
-            <div class="col-md-10">
-              <h2>Lorem ipsum sit dolor amet</h2>
+         {% endfor %}
+        </div>
+      </section>
 
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur volutpat orci non viverra scelerisque. Suspendisse semper turpis vel est consectetur, eget lobortis enim aliquam. Vivamus a sapien quis mauris rutrum placerat sed ut enim. Phasellus convallis vel lectus rhoncus sodales. Integer erat mi, pellentesque at fermentum vitae, eleifend et nisl. Duis ut lectus massa. Proin vel iaculis turpis. Curabitur venenatis, turpis in elementum dignissim, justo neque egestas turpis, nec sodales sem mi nec leo.</p>
-
-              <a href=/formation.html" class="button">En savoir plus</a>
-            </div>
-          </div>
-          <div class="row formation">
-            <div class="col-md-2">
-              <div class="course-image">
-                <img width="150" height="150" src="/images/seven-lemesle.png">
-              </div>
-            </div>
-            <div class="col-md-10">
-              <h2>Lorem ipsum sit dolor amet</h2>
-
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur volutpat orci non viverra scelerisque. Suspendisse semper turpis vel est consectetur, eget lobortis enim aliquam. Vivamus a sapien quis mauris rutrum placerat sed ut enim. Phasellus convallis vel lectus rhoncus sodales. Integer erat mi, pellentesque at fermentum vitae, eleifend et nisl. Duis ut lectus massa. Proin vel iaculis turpis. Curabitur venenatis, turpis in elementum dignissim, justo neque egestas turpis, nec sodales sem mi nec leo.</p>
-
-              <a href="/formation.html" class="button">En savoir plus</a>
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="title">Nos formateurs</h1>
             </div>
           </div>
         </div>
