Add duration to the trainings programs

--- a/formations.html
+++ b/formations.html
@@ -20,7 +20,7 @@ class: formations
               </div>
             </div>
             <div class="col-md-10">
-              <h2>{{formation.title}}</h2>
+              <h2>{{formation.title}} - <em>{{ formation.duree }}</em></h2>
 
               <p>{{ formation.pitch }}</p>
 
