--- a/expertises.html
+++ b/expertises.html
@@ -8,7 +8,7 @@ class: partenariats
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h1 class="title">Partenariats</h1>
+              <h1 class="title">Cloud</h1>
             </div>
           </div>
           <div class="row partenariat-list">
@@ -19,12 +19,18 @@ class: partenariats
             </div>
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
-                  <img src="/images/partenariats/ansible.png" alt="Ansible" />
+                  <img src="/images/partenariats/google-cloud-platform.png" alt="Google Cloud Platform" />
                 </div>
             </div>
+              <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
+                <div class="partenaire-image">
+                  <img src="/images/partenariats/cloud-azure.png" alt="Cloud Azure" />
+                </div>
+            </div>
+
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
-                  <img src="/images/partenariats/chef.png" alt="Chef" />
+                  <img src="/images/partenariats/openstack.png" alt="Openstack" />
                 </div>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
@@ -34,29 +40,10 @@ class: partenariats
             </div>
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
-                  <img src="/images/partenariats/cloud-azure.png" alt="Cloud Azure" />
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
-                <div class="partenaire-image">
-                  <img src="/images/partenariats/cloudera.png" alt="Cloudera" />
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
-                <div class="partenaire-image">
-                  <img src="/images/partenariats/google-cloud-platform.png" alt="Google Cloud Platform" />
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
-                <div class="partenaire-image">
                   <img src="/images/partenariats/heroku.png" alt="Heroku" />
                 </div>
             </div>
-            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
-                <div class="partenaire-image">
-                  <img src="/images/partenariats/jenkins.png" alt="Jenkins" />
-                </div>
-            </div>
+
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
                   <img src="/images/partenariats/numergy.png" alt="Numergy" />
@@ -67,16 +54,45 @@ class: partenariats
                   <img src="/images/partenariats/opengraph.png" alt="Opengraph" />
                 </div>
             </div>
-            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
-                <div class="partenaire-image">
-                  <img src="/images/partenariats/openstack.png" alt="Openstack" />
-                </div>
-            </div>
+
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
                   <img src="/images/partenariats/ovh.png" alt="OVH" />
                 </div>
             </div>
+
+          </div>
+             <div class="row">
+            <div class="col-md-12">
+              <h1 class="title">Outils</h1>
+            </div>
+          </div>
+                      <div class="row partenariat-list">
+
+            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
+                <div class="partenaire-image">
+                  <img src="/images/partenariats/ansible.png" alt="Ansible" />
+                </div>
+            </div>
+            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
+                <div class="partenaire-image">
+                  <img src="/images/partenariats/chef.png" alt="Chef" />
+                </div>
+            </div>
+
+            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
+                <div class="partenaire-image">
+                  <img src="/images/partenariats/cloudera.png" alt="Cloudera" />
+                </div>
+            </div>
+
+            <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
+                <div class="partenaire-image">
+                  <img src="/images/partenariats/jenkins.png" alt="Jenkins" />
+                </div>
+            </div>
+
+
             <div class="col-xs-6 col-sm-6 col-md-3 col-xl-2">
                 <div class="partenaire-image">
                   <img src="/images/partenariats/xebialabs.png" alt="XebiaLabs" />
