--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@ class: home
             <p class="up-title"><strong>IT</strong> as a service</p>
             <h1 class="title">Cloud experts</h1>
             <p class="home-text">
-              Le <strong>Cloud</strong> est aujourd'hui incontournable. Il révolutionne le paysage de l'<strong>IT</strong>.<br/>
-              Notre métier : vous aider à tirer le meilleur parti des avancées technologiques du <strong>Cloud</strong>.<br/>
+
+              <strong>Notre métier</strong> : supprimer les contraintes entre vos développements et la livraison de
+              valeur à vos utilisateurs. C’est l’objet de l’approche <strong>DevOps</strong>.<br/>
+
+              Dans ce cadre, les avancées technologiques du Cloud sont de puissants facilitateurs.<br/>
+
               Nous accompagnons des entreprises comme la vôtre dans l'optimisation de leurs solutions, grâce au <strong>Cloud</strong>.<br/>
               Nous réalisons la transformation de ces solutions, au regard des enjeux métier.
             </p>
