Finalize expertises Add a callout for collecting data on techtrends download

--- a/a-propos.html
+++ b/a-propos.html
@@ -30,26 +30,39 @@ class: a-propos
                 </a>
               </p>
             </div>
-            <div class="col-md-4">
-              <div class="bloc-apropos">
-                <h2 class="subtitle">People first</h2>
-                <p>Lorem ipsum sit dolor amet</p>
-              </div>
-              <div class="bloc-apropos">
-                <h2 class="subtitle">Knowledge exchange</h2>
-                <p>Lorem ipsum sit dolor amet</p>
-              </div>
-              <div class="bloc-apropos">
-                <h2 class="subtitle">No compromise on quality</h2>
-                <p>Lorem ipsum sit dolor amet</p>
-              </div>
-              <div class="bloc-apropos">
-                <h2 class="subtitle">From good to great</h2>
-                <p>Lorem ipsum sit dolor amet</p>
-              </div>
-            </div>
-          </div>
+            <div class="col-md-4 valeurs">
+              <h2>Nos valeurs</h2>
+              <ul>
+                <li>
+                  Passion
+                </li>
+                <li>
+                  Fun
+                </li>
+                <li>
+                  Ecoute
+                </li>
+                <li>
+                  Partage
+                </li>
+                <li>
+                  Amélioration continue
+                </li>
+                <li>
+                  Simplicité
+                </li>
+                <li>
+                  Amitié
+                </li>
+                <li>
+                  Ouverture
+                </li>
+                <li>
+                  Tolérance
+                </li>
+              </ul>
 
+            </div>
           <div class="row">
             <div class="col-md-12">
               <h1 class="title">L'équipe</h1>
