Try relative_url filter

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ class: home
               <div class="etape-2">
                 <div class="illustration"><img src="./images/oeil.png" alt="01_Identifier" width="88" height="51" /></div>
                 <div>
-                  <h2>01_Identifier</h2>
+                  <h2>Identifier</h2>
                   <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
                   <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
                 </div>
@@ -138,8 +138,8 @@ class: home
               <div class="etape-3">
                 <div class="illustration"><img src="./images/engrenage.png" alt="02_Réaliser" width="66" height="66" /></div>
                 <div>
-                  <h2>02_Réaliser</h2>
-                  <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que soit la plate-forme de Cloud choisie.</p>
+                  <h2>Réaliser</h2>
+                  <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que soit la plate-forme choisie.</p>
                   <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
                 </div>
               </div>
@@ -147,7 +147,7 @@ class: home
               <div class="etape-1">
                 <div class="illustration"><img src="./images/migrer.png" alt="03_Migrer" width="74" height="62" /></div>
                 <div>
-                  <h2>03_Migrer</h2>
+                  <h2>Migrer</h2>
                   <p>Nous accompagnons nos clients afin d’opérer les changements techniques et humains induits par les nouveaux services mis en place.</p>
                   <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
                 </div>
