--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@ class: services
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <h2>01_Identifier</h2>
+                    <h2>Identifier</h2>
 
                     <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
                     <ul>
@@ -24,7 +24,7 @@ class: services
                         <li>propositions de bonnes pratiques sur la base de retours d’expériences</li>
                     </ul>
 
-                    <h2>02_Réaliser</h2>
+                    <h2>Réaliser</h2>
 
 
                     <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que soit la
@@ -33,7 +33,7 @@ class: services
                         <li>cloud public, privé ou hybride</li>
                     </ul>
 
-                    <h2>03_Migrer</h2>
+                    <h2>Migrer</h2>
 
                     <p>Nous accompagnons nos clients afin d’opérer les changements techniques et humains induits par les
                         nouveaux services mis en place :</p>
