Fix relative URL on index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ class: home
 
             <p class="more">
               <a href="#" id="ce-que-nous-faisons">
-                <img src="./images/more.png" alt="Ce que nous faisons" width="52" height="44" /><br/>
+                <img src="{{"/images/more.png" | relative_url }}" alt="Ce que nous faisons" width="52" height="44" /><br/>
                 Ce que nous faisons
               </a>
             </p>
@@ -31,7 +31,7 @@ class: home
 
             <div class="techtrends">
               <div class="techtrends-image">
-                <a id="tt-link" href="#"  data-toggle="modal" data-target="#myModal"><img src="/images/techtrends-cloud.png" alt="Techtrends Cloud" /></a>
+                <a id="tt-link" href="#"  data-toggle="modal" data-target="#myModal"><img src="{{"/images/techtrends-cloud.png"| relative_url }}" alt="Techtrends Cloud" /></a>
               </div>
               <div class="techtrends-text">
                 <h2>Techtrends Cloud</h2>
@@ -124,32 +124,32 @@ class: home
             <div class="col-xs-12">
               <h1 class="title">Les 3 étapes du service Wescale</h1>
 
-              <img class="schema" src="./images/schema.png" alt="Les 3 étapes du service Wescale" />
+              <img class="schema" src="{{"/images/schema.png" | relative_url }}" alt="Les 3 étapes du service Wescale" />
 
               <div class="etape-2">
-                <div class="illustration"><img src="./images/oeil.png" alt="01_Identifier" width="88" height="51" /></div>
+                <div class="illustration"><img src="{{"/images/oeil.png"| relative_url }}" alt="01_Identifier" width="88" height="51" /></div>
                 <div>
                   <h2>Identifier</h2>
                   <p>Nous proposons l’étude du SI de l'entreprise, pour définir les meilleurs axes d'améliorations.</p>
-                  <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
+                  <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a></p>
                 </div>
               </div>
 
               <div class="etape-3">
-                <div class="illustration"><img src="./images/engrenage.png" alt="02_Réaliser" width="66" height="66" /></div>
+                <div class="illustration"><img src="{{"/images/engrenage.png"| relative_url }}" alt="02_Réaliser" width="66" height="66" /></div>
                 <div>
                   <h2>Réaliser</h2>
                   <p>Nos consultants prennent part à la mise en place des services Cloud préconisés quelle que soit la plate-forme choisie.</p>
-                  <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
+                  <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a></p>
                 </div>
               </div>
 
               <div class="etape-1">
-                <div class="illustration"><img src="./images/migrer.png" alt="03_Migrer" width="74" height="62" /></div>
+                <div class="illustration"><img src="{{"/images/migrer.png"| relative_url }}" alt="03_Migrer" width="74" height="62" /></div>
                 <div>
                   <h2>Migrer</h2>
                   <p>Nous accompagnons nos clients afin d’opérer les changements techniques et humains induits par les nouveaux services mis en place.</p>
-                  <p class="news-readmore"><a href="/services.html">En savoir plus</a></p>
+                  <p class="news-readmore"><a href="{{"/services.html"| relative_url }}">En savoir plus</a></p>
                 </div>
               </div>
             </div>
@@ -165,17 +165,17 @@ class: home
             </div>
             <div class="col-xs-12 col-md-4">
               <h2>Cloud <span class="bold">Designer</span></h2>
-              <img src="/images/profil-designer.jpg" alt="Cloud Designer" />
+              <img src="{{"/images/profil-designer.jpg"| relative_url }}" alt="Cloud Designer" />
               <p>Consultant ayant une appétence pour l’analyse des besoins business et des enjeux stratégiques, de solides bases techniques Cloud pour être à même de proposer des processus et des  architectures réalistes bâties pour tenir et durer.</p>
             </div>
             <div class="col-xs-12 col-md-4">
               <h2>Cloud <span class="bold">Builder</span></h2>
-              <img src="/images/profil-builder.jpg" alt="Cloud Builder" />
+              <img src="{{"/images/profil-builder.jpg"| relative_url }}" alt="Cloud Builder" />
               <p>Consultant connaissant les briques utiles au fonctionnement d'un SI ou d'une usine logicielle, aimant les approches orientées services et bilingues DevOps. Il construit la solution Cloud avec la mise en place de l’architecture cible et instruit la migration.</p>
             </div>
             <div class="col-xs-12 col-md-4">
               <h2>Cloud <span class="bold">Runner</span></h2>
-              <img src="/images/profil-runner.jpg" alt="Cloud Runner" />
+              <img src="{{"/images/profil-runner.jpg"| relative_url }}" alt="Cloud Runner" />
               <p>Consultant pro du système, de l'automatisation, du monitoring et du réseau ayant le goût des prods bien huilées et sécurisées, aimant les architectures qui en imposent.<br/>
               Il opère et fait évoluer la solution Cloud mise en place.</p>
             </div>
@@ -191,23 +191,23 @@ class: home
               <!--<p class="subtitle">Nous accompagnons les projets de nombreux clients grands comptes institutionnels, industriels ou du monde bancaire.</p>-->
 
               <div class="partenaires">
-                <img src="images/references/partenaire_01.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_02.gif" alt=""  width="150px" />
-                <img src="images/references/partenaire_03.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_04.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_05.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_06.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_07.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_08.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_09.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_10.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_11.jpeg" alt="" width="100px" />
-                <img src="images/references/partenaire_12.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_13.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_14.png" alt=""  width="150px" />
-                <img src="images/references/partenaire_15.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_16.jpg" alt=""  width="150px" />
-                <img src="images/references/partenaire_17.png" alt=""  width="100px" />
+                <img src="{{"/images/references/partenaire_01.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_02.gif"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_03.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_04.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_05.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_06.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_07.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_08.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_09.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_10.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_11.jpeg"| relative_url }}" alt="" width="100px" />
+                <img src="{{"/images/references/partenaire_12.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_13.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_14.png"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_15.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_16.jpg"| relative_url }}" alt=""  width="150px" />
+                <img src="{{"/images/references/partenaire_17.png"| relative_url }}" alt=""  width="100px" />
               </div>
 <!--
 -->
