Use relatives URL in all templates

--- a/a-propos.html
+++ b/a-propos.html
@@ -25,7 +25,7 @@ class: a-propos
 
               <p class="more">
                 <a href="/services.html">
-                  <img src="./images/more-black.png" alt="Ce que nous faisons" width="52" height="44"><br>
+                  <img src="{{"/images/more-black.png"| relative_url }}" alt="Ce que nous faisons" width="52" height="44"><br>
                   Ce que nous faisons
                 </a>
               </p>
@@ -86,29 +86,6 @@ class: a-propos
                 {% endfor %}
               {% endfor %}
 
-<!--
-
-
-              <div class="equipe-photo"
-                   style="background: url(/images/wewes/luc-legardeur.png) no-repeat center center;background-size: cover;">
-                <div class="equipe-mask"></div>
-                <div class="equipe-name">
-                  <h2>Luc Legardeur</h2>
-                  <h3>Directeur général</h3>
-                </div>
-              </div>
-
-              <div class="equipe-photo"
-               style="background: url(/images/seven-lemesle.png) no-repeat center center;background-size: cover;">
-                <div class="equipe-mask"></div>
-                <div class="equipe-name">
-                  <h2>Séven Le Mesle</h2>
-                  <h3>Président co-fondateur</h3>
-                </div>
-              </div>
-            </div>
-          </div>
--->
 
         </div>
       </section>
