--- a/contact.html
+++ b/contact.html
@@ -32,18 +32,18 @@ class: contact
             </div>
             <div class="col-md-4">
               <div class="contactinfo">
-                <img src="/images/map.png" alt="Adresse" />
+                <img src="{{"/images/map.png"| relative_url }}" alt="Adresse" />
                 <p><a href="https://goo.gl/maps/yoQeQA2pfDE2" class="to-maps">156, boulevard Haussman<br/>75008 Paris</a></p>
               </div>
               <div class="contactinfo">
-                <img src="/images/phone.png" alt="Contact" />
+                <img src="{{"/images/phone.png"| relative_url }}" alt="Contact" />
                 <p>01.85.08.18.81<br/><a href="mailto:contact@wescale.fr">contact@wescale.fr</a></p>
               </div>
               <div class="contactinfo socials">
-                <img src="/images/social.png" alt="Réseaux sociaux" />
+                <img src="{{"/images/social.png"| relative_url }}" alt="Réseaux sociaux" />
                 <p>
-                  <a href="#" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                  <a href="#" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <a href="https://twitter.com/yeswescale" title="Twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                  <a href="https://www.linkedin.com/company/wescale" title="Linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                 </p>
               </div>
             </div>
