--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@ class: services
                 </div>
                 <div class="col-md-6 schema-container">
 
-                    <img class="schema2" src="./images/schema2.png" alt="Les 3 étapes du service Wescale"/>
+                    <img class="schema2" src="{{"/images/schema2.png"|relative_url}}" alt="Les 3 étapes du service Wescale"/>
 
                 </div>
             </div>
